--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,12 @@
-sonar.projectKey = jvlstuff_sonar-x
-sonar.organization = jvlstuff
+sonar.projectKey=jvlstuff_sonar-example
+sonar.organization=jvlstuff
+
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=sonar-example
+#sonar.projectVersion=1.0
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
